// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> render matched route is active in snapshot 1`] = `
<Menustyles__Links
  align="middle"
  currentPath="/"
  isAuthenticated={true}
  links={
    Array [
      Object {
        "href": "/",
        "title": "Home",
      },
      Object {
        "hard": true,
        "href": "undefined/proposals",
        "title": "Proposals",
      },
      Object {
        "hard": true,
        "href": "undefined/bookings",
        "title": "Bookings",
      },
    ]
  }
  onLinkClick={[Function]}
>
  <Menustyles__MenuLink
    data-active={true}
    key="f356800ca07b23550b76c6af4a9a9bfcbed66569"
    onClick={[Function]}
    spaced={true}
    to="/"
  >
    Home
  </Menustyles__MenuLink>
  <Menustyles__MenuLink
    data-active={false}
    href="undefined/proposals"
    key="d0a77c613f3c3ea60710cdc8518e062873244718"
    onClick={[Function]}
    spaced={true}
  >
    Proposals
  </Menustyles__MenuLink>
  <Menustyles__MenuLink
    data-active={false}
    href="undefined/bookings"
    key="7f45ac3eccc542131a023e9e2d19fcdcbbcc93ed"
    onClick={[Function]}
    spaced={true}
  >
    Bookings
  </Menustyles__MenuLink>
</Menustyles__Links>
`;

exports[`<Menu /> render matches logged in snapshot 1`] = `
<Menustyles__Links
  align="middle"
  currentPath=""
  isAuthenticated={true}
  links={
    Array [
      Object {
        "href": "/",
        "title": "Home",
      },
      Object {
        "hard": true,
        "href": "undefined/proposals",
        "title": "Proposals",
      },
      Object {
        "hard": true,
        "href": "undefined/bookings",
        "title": "Bookings",
      },
    ]
  }
  onLinkClick={[Function]}
>
  <Menustyles__MenuLink
    data-active={false}
    key="f356800ca07b23550b76c6af4a9a9bfcbed66569"
    onClick={[Function]}
    spaced={true}
    to="/"
  >
    Home
  </Menustyles__MenuLink>
  <Menustyles__MenuLink
    data-active={false}
    href="undefined/proposals"
    key="d0a77c613f3c3ea60710cdc8518e062873244718"
    onClick={[Function]}
    spaced={true}
  >
    Proposals
  </Menustyles__MenuLink>
  <Menustyles__MenuLink
    data-active={false}
    href="undefined/bookings"
    key="7f45ac3eccc542131a023e9e2d19fcdcbbcc93ed"
    onClick={[Function]}
    spaced={true}
  >
    Bookings
  </Menustyles__MenuLink>
</Menustyles__Links>
`;

exports[`<Menu /> render matches logged out snapshot 1`] = `
<Menustyles__Links
  align="middle"
  currentPath=""
  isAuthenticated={false}
  links={
    Array [
      Object {
        "href": "/",
        "title": "Home",
      },
      Object {
        "hard": true,
        "href": "undefined/proposals",
        "title": "Proposals",
      },
      Object {
        "hard": true,
        "href": "undefined/bookings",
        "title": "Bookings",
      },
    ]
  }
  onLinkClick={[Function]}
>
  <Menustyles__MenuLink
    data-active={false}
    key="f356800ca07b23550b76c6af4a9a9bfcbed66569"
    onClick={[Function]}
    spaced={true}
    to="/"
  >
    Home
  </Menustyles__MenuLink>
  <Menustyles__MenuLink
    data-active={false}
    href="undefined/proposals"
    key="d0a77c613f3c3ea60710cdc8518e062873244718"
    onClick={[Function]}
    spaced={true}
  >
    Proposals
  </Menustyles__MenuLink>
  <Menustyles__MenuLink
    data-active={false}
    href="undefined/bookings"
    key="7f45ac3eccc542131a023e9e2d19fcdcbbcc93ed"
    onClick={[Function]}
    spaced={true}
  >
    Bookings
  </Menustyles__MenuLink>
</Menustyles__Links>
`;
